--- a/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
+++ b/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
         <Product>KaKush LLC</Product>
@@ -12,7 +13,7 @@
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <LangVersion>10.0</LangVersion>
-        <Version>4.8.6</Version>
+        <Version>4.9.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
