--- a/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
+++ b/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
@@ -1,24 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.CQRS.AzureServiceBus\Zerra.CQRS.AzureServiceBus.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.CQRS.Kafka\Zerra.CQRS.Kafka.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.CQRS.AzureServiceBus\Zerra.CQRS.AzureServiceBus.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.CQRS.Kafka\Zerra.CQRS.Kafka.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="cqrssettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="cqrssettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
 </Project>
