--- a/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStoreDB\Zerra.Repository.EventStoreDB.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.MsSql\Zerra.Repository.MsSql.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.PostgreSql\Zerra.Repository.PostgreSql.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.MySql\Zerra.Repository.MySql.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain.Ledger1\ZerraDemo.Domain.Ledger1.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStoreDB\Zerra.Repository.EventStoreDB.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Repository.MsSql\Zerra.Repository.MsSql.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Repository.PostgreSql\Zerra.Repository.PostgreSql.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Repository.MySql\Zerra.Repository.MySql.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain.Ledger1\ZerraDemo.Domain.Ledger1.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
