--- a/Demo/ZerraDemo.Domain.Ledger1/ZerraDemo.Domain.Ledger1.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger1/ZerraDemo.Domain.Ledger1.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
+    <ItemGroup>
 
-    <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
-  </ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
+    </ItemGroup>
 
 </Project>
