--- a/Demo/ZerraDemo.Domain.Ledger2.EventStore/ZerraDemo.Domain.Ledger2.EventStore.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger2.EventStore/ZerraDemo.Domain.Ledger2.EventStore.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStoreDB\Zerra.Repository.EventStoreDB.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain.Ledger2\ZerraDemo.Domain.Ledger2.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStoreDB\Zerra.Repository.EventStoreDB.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain.Ledger2\ZerraDemo.Domain.Ledger2.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
