--- a/Demo/ZerraDemo.Service.Pets/ZerraDemo.Service.Pets.csproj
+++ b/Demo/ZerraDemo.Service.Pets/ZerraDemo.Service.Pets.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain.Pets.Sql\ZerraDemo.Domain.Pets.Sql.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain.Pets\ZerraDemo.Domain.Pets.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain.Pets.Sql\ZerraDemo.Domain.Pets.Sql.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain.Pets\ZerraDemo.Domain.Pets.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
+    </ItemGroup>
 
 </Project>
