--- a/Demo/ZerraDemo.Service.WeatherCached/ZerraDemo.Service.WeatherCached.csproj
+++ b/Demo/ZerraDemo.Service.WeatherCached/ZerraDemo.Service.WeatherCached.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain.WeatherCached\ZerraDemo.Domain.WeatherCached.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain.WeatherCached\ZerraDemo.Domain.WeatherCached.csproj" />
+    </ItemGroup>
 
 </Project>
