--- a/Demo/ZerraDemo.Web/ZerraDemo.Web.csproj
+++ b/Demo/ZerraDemo.Web/ZerraDemo.Web.csproj
@@ -1,35 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <UserSecretsId>ddc7e5f7-6d95-449a-9e11-5affc00218dd</UserSecretsId>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <UserSecretsId>ddc7e5f7-6d95-449a-9e11-5affc00218dd</UserSecretsId>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.Web\Zerra.Web.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
-    <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.Web\Zerra.Web.csproj" />
+        <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
+        <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Content Update="wwwroot\js\TypeScriptModels.js">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>TypeScriptModels.tt</DependentUpon>
-    </Content>
-    <Content Update="wwwroot\js\TypeScriptModels.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>TypeScriptModels.js</LastGenOutput>
-    </Content>
-  </ItemGroup>
+    <ItemGroup>
+        <Content Update="wwwroot\js\TypeScriptModels.js">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>TypeScriptModels.tt</DependentUpon>
+        </Content>
+        <Content Update="wwwroot\js\TypeScriptModels.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>TypeScriptModels.js</LastGenOutput>
+        </Content>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
+    <ItemGroup>
+        <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+    </ItemGroup>
 
 </Project>
