--- a/Framework/Zerra.Repository/Zerra.Repository.csproj
+++ b/Framework/Zerra.Repository/Zerra.Repository.csproj
@@ -49,4 +49,8 @@ Zerra.Repository.ApplyEntityAttribute
         <ProjectReference Include="..\Zerra\Zerra.csproj" />
     </ItemGroup>
 
+    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <NoWarn>CS8600;CS8601;CS8602;CS8603;CS8604;CS8625</NoWarn>
+    </PropertyGroup>
+
 </Project>
