--- a/Framework/Zerra.Logger/Zerra.Logger.csproj
+++ b/Framework/Zerra.Logger/Zerra.Logger.csproj
@@ -34,4 +34,8 @@
         <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     </ItemGroup>
 
+    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <NoWarn>CS8600;CS8601;CS8602;CS8603;CS8604;CS8625</NoWarn>
+    </PropertyGroup>
+
 </Project>
