--- a/Framework/Zerra.Repository/Zerra.Repository.csproj
+++ b/Framework/Zerra.Repository/Zerra.Repository.csproj
@@ -36,6 +36,7 @@ Zerra.Repository.ApplyEntityAttribute
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>12.0</LangVersion>
         <Version>5.0.0</Version>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
