--- a/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
+++ b/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
@@ -5,11 +5,13 @@
         <Nullable>enable</Nullable>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
-        <Product>KaKush LLC</Product>
+        <Copyright>KaKush LLC</Copyright>
+        <Product>Zerra Framework CQRS Service</Product>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Azure Event Hub</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <Description>Azure Event Hub implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
+        <Company>KaKush LLC</Company>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <LangVersion>12.0</LangVersion>
