--- a/Demo/ZerraDemo.Domain/ZerraDemo.Domain.csproj
+++ b/Demo/ZerraDemo.Domain/ZerraDemo.Domain.csproj
@@ -24,9 +24,9 @@
         </None>
     </ItemGroup>
 
-    <PropertyGroup>
+    <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
-    </PropertyGroup>
+    </PropertyGroup>-->
 
 </Project>
