Source Generation Work

--- a/Demo/ZerraDemo.Domain/ZerraDemo.Domain.csproj
+++ b/Demo/ZerraDemo.Domain/ZerraDemo.Domain.csproj
@@ -6,7 +6,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
         <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
     </ItemGroup>
 
@@ -24,6 +23,9 @@
         </None>
     </ItemGroup>
 
+    <!--<ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
+    </ItemGroup>-->
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
