--- a/Tests/Zerra.Test/Zerra.Test.csproj
+++ b/Tests/Zerra.Test/Zerra.Test.csproj
@@ -9,6 +9,7 @@
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <LangVersion>12.0</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -33,7 +34,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" />
         <ProjectReference Include="..\..\Misc\Zerra.Tools\Zerra.Tools.csproj" />
         <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
     </ItemGroup>
