--- a/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
+++ b/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
@@ -12,4 +12,12 @@
         <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
     </ItemGroup>
 
+    <!--<ItemGroup>
+        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration.Discovery\Zerra.SourceGeneration.Discovery.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
+    </ItemGroup>-->
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+
 </Project>
