--- a/Framework/Zerra/Zerra.csproj
+++ b/Framework/Zerra/Zerra.csproj
@@ -88,7 +88,7 @@
     </ItemGroup>
 
     <!--<ItemGroup>
-        <ProjectReference Include="..\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="..\Zerra.SourceGeneration.Types\Zerra.SourceGeneration.Types.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>-->
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
