--- a/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
+++ b/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
@@ -15,9 +15,9 @@
     <!--<ItemGroup>
         <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration.Discovery\Zerra.SourceGeneration.Discovery.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
     </ItemGroup>-->
-    <PropertyGroup>
+    <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
-    </PropertyGroup>
+    </PropertyGroup>-->
 
 </Project>
