--- a/Tests/Zerra.SourceGeneration.Test/Zerra.SourceGeneration.Test.csproj
+++ b/Tests/Zerra.SourceGeneration.Test/Zerra.SourceGeneration.Test.csproj
@@ -35,8 +35,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration.Discovery\Zerra.SourceGeneration.Discovery.csproj" />
       <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration.Types\Zerra.SourceGeneration.Types.csproj" />
+      <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" />
     </ItemGroup>
 
 </Project>
