--- a/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
+++ b/Demo/ZerraDemo.Domain.Pets/ZerraDemo.Domain.Pets.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <!--<ItemGroup>
-        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration.Discovery\Zerra.SourceGeneration.Discovery.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
+        <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
     </ItemGroup>-->
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
