--- a/Misc/Zerra.Tools/Zerra.Tools.csproj
+++ b/Misc/Zerra.Tools/Zerra.Tools.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
+        <Nullable>enable</Nullable>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
         <Product>Zerra Framework</Product>
