--- a/Demo/ZerraDemo.Domain.Ledger2.EventStore/ZerraDemo.Domain.Ledger2.EventStore.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger2.EventStore/ZerraDemo.Domain.Ledger2.EventStore.csproj
@@ -12,9 +12,9 @@
         <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
     </ItemGroup>
 
-    <!--<ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
-    </ItemGroup>-->
+    </ItemGroup>
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
