--- a/Demo/ZerraDemo.Domain.Pets.Sql/ZerraDemo.Domain.Pets.Sql.csproj
+++ b/Demo/ZerraDemo.Domain.Pets.Sql/ZerraDemo.Domain.Pets.Sql.csproj
@@ -14,9 +14,9 @@
         <ProjectReference Include="..\ZerraDemo.Domain.Pets\ZerraDemo.Domain.Pets.csproj" />
     </ItemGroup>
 
-    <!--<ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
-    </ItemGroup>-->
+    </ItemGroup>
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
