--- a/Demo/ZerraDemo.Domain.Weather/ZerraDemo.Domain.Weather.csproj
+++ b/Demo/ZerraDemo.Domain.Weather/ZerraDemo.Domain.Weather.csproj
@@ -11,9 +11,9 @@
         <ProjectReference Include="..\ZerraDemo.Common\ZerraDemo.Common.csproj" />
     </ItemGroup>
 
-    <!--<ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
-    </ItemGroup>-->
+    </ItemGroup>
     <!--<PropertyGroup>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
